// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavItems when user is authenticated but loadUser() failed matches snapshot 1`] = `
<ul
  className="sc-19qg9cj-0 eGTzxN"
>
  <li
    className="sc-19qg9cj-1 iTHAEh"
    onClick={[Function]}
    onMouseEnter={[Function]}
  >
    <a
      className="create-post-link"
    >
      Create Post
    </a>
  </li>
  <li
    className="sc-19qg9cj-1 iTHAEh ant-dropdown-trigger"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <a
      className="ant-dropdown-link"
      onClick={[Function]}
    >
      My Account
       
      <span
        aria-label="down"
        className="anticon anticon-down"
        role="img"
      >
        <svg
          aria-hidden="true"
          className=""
          data-icon="down"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
          />
        </svg>
      </span>
    </a>
  </li>
</ul>
`;

exports[`NavItems when user is authenticated matches snapshot 1`] = `
<ul
  className="sc-19qg9cj-0 eGTzxN"
>
  <li
    className="sc-19qg9cj-1 iTHAEh"
    onClick={[Function]}
    onMouseEnter={[Function]}
  >
    <a
      className="create-post-link"
    >
      Create Post
    </a>
  </li>
  <li
    className="sc-19qg9cj-1 iTHAEh ant-dropdown-trigger"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <a
      className="ant-dropdown-link"
      onClick={[Function]}
    >
      test_username
       
      <span
        aria-label="down"
        className="anticon anticon-down"
        role="img"
      >
        <svg
          aria-hidden="true"
          className=""
          data-icon="down"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
          />
        </svg>
      </span>
    </a>
  </li>
</ul>
`;

exports[`NavItems when user is not authenticated matches snapshot 1`] = `
<ul
  className="sc-19qg9cj-0 eGTzxN"
>
  <li
    className="sc-19qg9cj-1 iTHAEh"
    onClick={[Function]}
  >
    <a
      className="create-post-link-disabled"
    >
      Create Post
    </a>
  </li>
  <li
    className="sc-19qg9cj-1 iTHAEh"
    onClick={[Function]}
  >
    <a
      className="login-link"
    >
      Login
    </a>
  </li>
  <li
    className="sc-19qg9cj-1 iTHAEh"
    onClick={[Function]}
  >
    <a
      className="register-link"
    >
      Register
    </a>
  </li>
</ul>
`;
